# elena-ai

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package.json  tauri.conf.json  vite.config.js
src/: App.vue  style.css
src-tauri/: database.rs  elena.rs  main.rs  ollama.rs
